--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Flask==0.10.1
 beautifulsoup4==4.4.1
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.8
+lxml==3.5.0
+MarkupSafe==0.23
 mechanize==0.2.5
+Werkzeug==0.11.3
