--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-beautifulsoup4==4.4.1
 Flask==0.10.1
-itsdangerous==0.24
+Flask-SQLAlchemy==2.1
+SQLAlchemy==1.0.12
 Jinja2==2.8
-lxml==3.5.0
+beautifulsoup4==4.4.1
+itsdangerous==0.24
 MarkupSafe==0.23
 mechanize==0.2.5
-Werkzeug==0.11.3
+Werkzeug==0.11.4
+psycopg2==2.6.1
+lxml==3.5.0
