--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 Flask==0.10.1
+Flask-Migrate==1.8.0
 Flask-SQLAlchemy==2.1
-SQLAlchemy==1.0.12
+Flask-Script==2.0.5
 Jinja2==2.8
+Mako==1.0.4
+MarkupSafe==0.23
+SQLAlchemy==1.0.12
+Werkzeug==0.11.4
+alembic==0.8.5
 beautifulsoup4==4.4.1
 itsdangerous==0.24
-MarkupSafe==0.23
-mechanize==0.2.5
-Werkzeug==0.11.4
-psycopg2==2.6.1
 lxml==3.5.0
+mechanize==0.2.5
+psycopg2==2.6.1
+python-editor==0.5
